@@ -31,6 +31,7 @@
 int
 ged_mater(struct ged *gedp, int argc, const char *argv[])
 {
+    struct bu_attribute_value_set avs;
     static const char *usage = "object_name shader r [g b] inherit";
     static const char *prompt[] = {
 	"Name of combination to edit? ", /* unused */
@@ -68,6 +69,15 @@ ged_mater(struct ged *gedp, int argc, const char *argv[])
     comb = (struct rt_comb_internal *)intern.idb_ptr;
     RT_CK_COMB(comb);
 
+    bu_avs_init_empty(&avs);
+    if (db5_get_attributes(gedp->ged_wdbp->dbip, &avs, dp)) {
+	bu_vls_printf(gedp->ged_result_str, "Cannot get attributes for object %s\n", dp->d_namep);
+	bu_avs_free(&avs);
+	return GED_ERROR;
+    }
+    db5_standardize_avs(&avs);
+    bu_avs_print(&avs, "initial avs");
+
     /* deleting the color means we don't need to prompt for the green
      * and blue color channels, so offset our argument indices.
      */
@@ -101,6 +111,7 @@ ged_mater(struct ged *gedp, int argc, const char *argv[])
 	}
 
 	bu_vls_printf(gedp->ged_result_str, "%s", prompt[argc+offset-1]);
+	bu_avs_free(&avs);
 	return GED_MORE;
     }
 
@@ -108,6 +119,7 @@ ged_mater(struct ged *gedp, int argc, const char *argv[])
     /* too much */
     if ((!offset && argc > 7) || (offset && argc > 5)) {
 	bu_vls_printf(gedp->ged_result_str, "Too many arguments.\nUsage: %s %s", argv[0], usage);
+	bu_avs_free(&avs);
 	return GED_ERROR;
     }
 
@@ -125,6 +137,7 @@ ged_mater(struct ged *gedp, int argc, const char *argv[])
 		bu_vls_printf(gedp->ged_result_str, "Problem with shader string [%s]", argv[2]);
 		rt_db_free_internal(&intern);
 		bu_vls_free(&vls);
+		bu_avs_free(&avs);
 		return GED_ERROR;
 	    }
 	}
@@ -142,12 +155,14 @@ ged_mater(struct ged *gedp, int argc, const char *argv[])
 	    if (!comb->rgb_valid) {
 		bu_vls_printf(gedp->ged_result_str, "Color is not set, cannot skip by using existing RED color value");
 		rt_db_free_internal(&intern);
+		bu_avs_free(&avs);
 		return GED_ERROR;
 	    }
 	} else {
 	    if (sscanf(argv[3], "%d", &r) != 1 || r < 0 || 255 < r) {
 		bu_vls_printf(gedp->ged_result_str, "Bad color value - %s", argv[3]);
 		rt_db_free_internal(&intern);
+		bu_avs_free(&avs);
 		return GED_ERROR;
 	    }
 	    comb->rgb[0] = r;
@@ -157,12 +172,14 @@ ged_mater(struct ged *gedp, int argc, const char *argv[])
 	    if (!comb->rgb_valid) {
 		bu_vls_printf(gedp->ged_result_str, "Color is not set, cannot skip by using existing GREEN color value");
 		rt_db_free_internal(&intern);
+		bu_avs_free(&avs);
 		return GED_ERROR;
 	    }
 	} else {
 	    if (sscanf(argv[4], "%d", &g) != 1 || g < 0 || 255 < g) {
 		bu_vls_printf(gedp->ged_result_str, "Bad color value - %s", argv[4]);
 		rt_db_free_internal(&intern);
+		bu_avs_free(&avs);
 		return GED_ERROR;
 	    }
 	    comb->rgb[1] = g;
@@ -172,12 +189,14 @@ ged_mater(struct ged *gedp, int argc, const char *argv[])
 	    if (!comb->rgb_valid) {
 		bu_vls_printf(gedp->ged_result_str, "Color is not set, cannot skip by using existing BLUE color value");
 		rt_db_free_internal(&intern);
+		bu_avs_free(&avs);
 		return GED_ERROR;
 	    }
 	} else {
 	    if (sscanf(argv[5], "%d", &b) != 1 || b < 0 || 255 < b) {
 		bu_vls_printf(gedp->ged_result_str, "Bad color value - %s", argv[5]);
 		rt_db_free_internal(&intern);
+		bu_avs_free(&avs);
 		return GED_ERROR;
 	    }
 	    comb->rgb[2] = b;
@@ -191,12 +210,27 @@ ged_mater(struct ged *gedp, int argc, const char *argv[])
 	if (comb->inherit > 1) {
 	    bu_vls_printf(gedp->ged_result_str, "Inherit value should be 0 or 1");
 	    rt_db_free_internal(&intern);
+	    bu_avs_free(&avs);
 	    return GED_ERROR;
 	}
     }
 
+    db5_sync_comb_to_attr(&avs, comb);
+    bu_avs_print(&avs, "post avs");
+    db5_standardize_avs(&avs);
+    bu_avs_print(&avs, "post sync");
+
     GED_DB_PUT_INTERNAL(gedp, dp, &intern, &rt_uniresource, GED_ERROR);
 
+    if (db5_update_attributes(dp, &avs, gedp->ged_wdbp->dbip)) {
+	bu_vls_printf(gedp->ged_result_str,
+		"Error: failed to update attributes\n");
+	bu_avs_free(&avs);
+	return GED_ERROR;
+    }
+
+    bu_avs_free(&avs);
+    
     return GED_OK;
 }
 
